# tagmania

./: .ai-compliance.yaml  .bandit  .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  Makefile  NOTES.md  README.md  SUPPORT.md  ai-shell.toml  bandit-report.json  index.html  opencode.json  pip-audit-report.json  pyproject.toml  renovate.json5  safety-report.json  search.js  security-reports.html  semgrep-report.json  tagmania.html  template.yaml  test-report.html
.agents/skills/ai-create-cmd/: SKILL.md
.agents/skills/ai-monitor-pipeline/: SKILL.md
.agents/skills/ai-new-project/: SKILL.md
.agents/skills/ai-pick-issue/: SKILL.md
.agents/skills/ai-prepare-branch/: SKILL.md
.agents/skills/ai-repo-health/: SKILL.md
.agents/skills/ai-standardize-repo/: SKILL.md
.agents/skills/ai-submit-work/: SKILL.md
.agents/skills/ai-web-dev/: SKILL.md
.claude/: settings.json
.claude/agents/: git-workflow.md
.claude/commands/: ai-pick-issue.md  ai-ship.md  ai-start-work.md
.claude/skills/ai-create-cmd/: SKILL.md
.claude/skills/ai-monitor-pipeline/: SKILL.md
.claude/skills/ai-pick-issue/: SKILL.md
.claude/skills/ai-prepare-branch/: SKILL.md
.claude/skills/ai-promote/: SKILL.md
.claude/skills/ai-repo-health/: SKILL.md
.claude/skills/ai-rollback/: SKILL.md
.claude/skills/ai-setup-oidc/: SKILL.md
.claude/skills/ai-standardize-dotfiles/: SKILL.md
.claude/skills/ai-standardize-pipeline/: SKILL.md
.claude/skills/ai-standardize-precommit/: SKILL.md
.claude/skills/ai-standardize-release/: SKILL.md
.claude/skills/ai-standardize-renovate/: SKILL.md
.claude/skills/ai-standardize-repo/: SKILL.md
.claude/skills/ai-status/: SKILL.md
.claude/skills/ai-submit-work/: SKILL.md
.claude/skills/ai-web-dev/: SKILL.md
.github/: .ai-compliance.yaml  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml  disable-dependabot.yml  labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cve-review.yaml  dependabot-auto-merge.yaml  label_pr.yml  pipeline.yaml  pre-commit.yml  publish.yaml  publish_docs.yml
compliance/: license-report.html  license-report.json
coverage/: coverage.json  coverage.xml
coverage/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a9f7d74cf19698e8___init___py.html  z_a9f7d74cf19698e8_delete_snapshots_py.html  z_a9f7d74cf19698e8_delete_volumes_py.html  z_a9f7d74cf19698e8_snapshot_manager_py.html  z_a9f7d74cf19698e8_start_cluster_py.html  z_a9f7d74cf19698e8_stop_cluster_py.html  z_a9f7d74cf19698e8_tag_manager_py.html  z_d003fc3a688a8954___init___py.html  z_d003fc3a688a8954_clusterset_py.html  z_d003fc3a688a8954_filterset_py.html  z_d003fc3a688a8954_tagset_py.html  z_d003fc3a688a8954_timing_py.html  z_d003fc3a688a8954_util_py.html
resources/: pytest-html.css
scripts/: cleanup_test_resources.sh  deep_cleanup_aws.sh
security/: bandit-report.json  pip-audit-report.json  security-reports.html
src/: delete_snapshots.py  delete_volumes.py  snapshot_manager.py  start_cluster.py  stop_cluster.py  tag_manager.py
src/iac_tools/: clusterset.py  filterset.py  tagset.py  util.py
src/tagmania/: __init__.py  delete_snapshots.py  delete_volumes.py  snapshot_manager.py  start_cluster.py  stop_cluster.py  tag_manager.py
src/tagmania/iac_tools/: __init__.py  clusterset.py  filterset.py  tagset.py  timing.py  util.py
tagmania/: delete_snapshots.html  delete_volumes.html  iac_tools.html  snapshot_manager.html  start_cluster.html  stop_cluster.html  tag_manager.html
tagmania/iac_tools/: clusterset.html  filterset.html  tagset.html  util.html
tests/: conftest.py  test-report.html  test_01_tagset.py  test_02_filterset.py  test_03_clusterset_unit.py  test_04_cli_unit.py  test_05_snapshot_manager_unit.py  test_06_cli_modules_unit.py  test_07_timing.py  test_10_cluster_set.py  test_20_targeted_restore.py  test_25_cross_cluster.py  test_30_snapshot_manager_cli.py
