[project]
name = "tagmania"
version = "2.0.0"
description = "Tool for manipulating sets of tagged resources in AWS."
authors = [
    {name = "Samuel Vange",email = "7166607+svange@users.noreply.github.com"}
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/svange/tagmania"
packages = [
    { include = "tagmania", from = "src" },
]
requires-python = ">=3.9,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cluster-start = "start_cluster:main"
cluster-stop = "stop_cluster:main"
cluster-snap = "snapshot_manager:main"

[tool.poetry.dependencies]
boto3 = "^1.39.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-html = "^4.1.1"
pytest-cov = "^6.2.1"
augint-github = "^1.3.0"

[tool.semantic_release]
major_on_zero = false
commit_message = "chore(release): release {version}"
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "main"
#commit_message = "chore(release): release {version}"
prerelease = false

[tool.semantic_release.branches.dev]
match = "dev"
#commit_message = "chore(pre-release): release {version}"
prerelease_token = "dev"
prerelease = true


[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
type = "github"

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"
fallback_env = "GH_TOKEN"

[tool.pytest.ini_options]
addopts = '-m "not redundant and not skip_ci" --html=report.html --self-contained-html'
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "INFO"
#environment_table_redact_list = ".*key.*"
#render_collapsed = "failed,error"
markers = [
    "redudant: mark test as redundant",
    "end_to_end: mark test as an end-to-end test, meant for running in CI/CD against a live environment",
    "no_infra: mark test as not requiring infrastructure, intended for running in CI/CD against local web server (to the runner)",
    "skip_ci: mark as not suitable for ci",
]
