[project]
name = "tagmania"
version = "2.7.0"
description = "Manic tools for manipulating sets of tagged resources in AWS."
authors = [
    {name = "Samuel Vange", email = "7166607+svange@users.noreply.github.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "boto3>=1.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-html>=4.1.0",
    "pytest-cov>=6.2.0",
    "pytest-click>=1.1.0",
    "ruff>=0.12.0",
    "python-semantic-release>=10.2.0",
    "pre-commit>=4.2.0",
    "pdoc>=15.0.0",
    "bandit>=1.8.0",
    "pip-audit>=2.9.0",
    "pip-licenses>=5.0.0",
    "mypy>=1.8.0",
    "boto3-stubs[ec2,s3]>=1.34.0",
    "semgrep>=1.90.0",
    "checkov>=3.2.0",
]

[project.scripts]
cluster-start = "tagmania.start_cluster:main"
cluster-stop = "tagmania.stop_cluster:main"
cluster-snap = "tagmania.snapshot_manager:main"

[build-system]
requires = ["uv_build>=0.9"]
build-backend = "uv_build"

# --- Tool Configuration ---

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "DTZ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tagmania"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tagmania.start_cluster"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tagmania.stop_cluster"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tagmania.snapshot_manager"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tagmania.delete_volumes"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tagmania.delete_snapshots"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tagmania.tag_manager"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: mark test as slow (does real AWS operations, takes several minutes)",
    "integration: mark test as integration test (requires AWS credentials)",
    "fast: mark test as fast",
    "cluster1: tests that use only the test1 cluster",
    "cluster2: tests that use only the test2 cluster",
    "cluster3: tests that use only the test3 cluster",
    "cluster_all: tests that use multiple clusters",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.semantic_release]
assets = ["uv.lock"]
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release [skip ci]"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = false
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/tagmania/__init__.py:__version__"]
build_command = "uv lock && uv build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
mode = "update"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false

[dependency-groups]
dev = [
    "augint-github>=1.10.0",
    "augint-shell>=0.16.9",
    "augint-tools>=4.3.0",
]
